src/test/ui/lexical-scopes.stderr
error[E0574]: expected struct, variant or union type, found type parameter `T`
  --> $DIR/lexical-scopes.rs:3:13
   |
LL | fn f<T>() {
   |      - found this type pararmeter
LL |     let t = T { i: 0 };
   |             ^ not a struct, variant or union type

error[E0599]: no function or associated item named `f` found for type parameter `Foo` in the current scope
  --> $DIR/lexical-scopes.rs:10:10
   |
LL | fn g<Foo>() {
   |      --- function or associated item `f` not found for this type parameter
LL |     Foo::f();
   |          ^ function or associated item not found in `Foo`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0574, E0599.
For more information about an error, try `rustc --explain E0574`.
